# DTTN-CLI

./: .ci-config-contract-tail.txt  .release-hardening-error.txt  .release-hardening-validated  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  config-cli-fast-diagnostics.txt  config-cli-pager-diagnostics.txt
.github/: phase6-status-sampler.patch
.github/scripts/: phase5_session_snapshot_postprocess.py
.github/workflows/: diagnose-dttn-config-model-cli-fast.yml  diagnose-dttn-config-model-cli-pager.yml  diagnose-dttn-config-model-cli.yml  dttn-apply-status-wire-fix-once.yml  dttn-apply-status-wire-once.yml  dttn-cleanup-pager-status-runtime-once.yml  dttn-config-cli-validation.yml  dttn-diagnose-status-wire-once.yml  dttn-finalize-pager-status-runtime-once.yml  dttn-phase-6-status-runtime.yml  dttn-phase1.yml  dttn-publish-pager-status-runtime-once.yml  dttn-publish-validated-pager-product-once.yml  dttn-recover-pager-status-runtime-once.yml  dttn-verify-pager-status-runtime-once.yml  dttn-windows-release.yml  format-config-cli-temp.yml  format-release-hardening.yml  implement-dttn-config-model-cli-fast-fixed.yml  implement-dttn-config-model-cli-fixed.yml  implement-dttn-config-model-cli.yml  implement-session-model-snapshot.yml  implement-status-runtime-phase-6.yml  one-shot-release-hardening-pr.yml  one-shot-release-hardening.yml  phase3-inspect.yml  phase4-model-catalog-status.yml  phase5-session-model-snapshot.yml  rebase-pr3-after-pr2.yml  rebase-stacked-prs.yml  repair-config-contract.yml  repair-release-validation.yml  trigger-session-model-snapshot-implementation.yml  update-release-lock.yml
crates/codegen/xai-chat-state/src/: commands.rs  types.rs
crates/codegen/xai-chat-state/src/actor/: state.rs  tests.rs
crates/codegen/xai-grok-agent/src/prompt/: prompt_encrypted.rs
crates/codegen/xai-grok-agent/templates/: prompt.md
crates/codegen/xai-grok-config/: Cargo.toml
crates/codegen/xai-grok-config/src/: lib.rs  model_providers.rs  paths.rs  provider_oauth.rs  user_config.rs
crates/codegen/xai-grok-models/: default_models.json
crates/codegen/xai-grok-models/src/: lib.rs
crates/codegen/xai-grok-pager/: Cargo.toml
crates/codegen/xai-grok-pager-bin/: Cargo.toml
crates/codegen/xai-grok-pager-bin/src/: main.rs
crates/codegen/xai-grok-pager-bin/tests/: config_cli_contract.rs  model_doctor_cli_contract.rs
crates/codegen/xai-grok-pager-pty-harness/src/: env.rs
crates/codegen/xai-grok-pager-render/src/terminal/: image.rs
crates/codegen/xai-grok-pager/assets/logo/: dttn05.txt  dttn07.txt
crates/codegen/xai-grok-pager/src/: config_cmd.rs  configure_wizard.rs  lib.rs  model_doctor.rs  model_doctor_dispatch.rs  models.rs
crates/codegen/xai-grok-pager/src/app/: actions.rs  app_view.rs  cli.rs  event_loop.rs
crates/codegen/xai-grok-pager/src/views/: mod.rs  shortcuts_bar.rs  status_runtime.rs  ui_text.rs
crates/codegen/xai-grok-pager/tests/: status_runtime_contract.rs
crates/codegen/xai-grok-pager/tests/pty_e2e/: welcome_screen_braille_logo_renders_correctly.rs
crates/codegen/xai-grok-sampler/src/: client.rs  config.rs
crates/codegen/xai-grok-sampler/src/actor/: state.rs
crates/codegen/xai-grok-sampler/tests/: provider_extensions.rs  responses_tool_contract.rs  test_actor.rs
crates/codegen/xai-grok-sampling-types/src/: lib.rs  model_catalog.rs  provider_telemetry.rs  types.rs
crates/codegen/xai-grok-shell/src/: lib.rs  model_catalog_doctor_refresh.rs  model_catalog_fetch.rs  model_catalog_runtime.rs
crates/codegen/xai-grok-shell/src/agent/: config.rs
crates/codegen/xai-grok-shell/src/remote/: client.rs
crates/codegen/xai-grok-shell/src/sampling/: mod.rs
crates/codegen/xai-grok-shell/src/session/: acp_session.rs  acp_types.rs  compaction.rs  handle.rs  mod.rs  pending_interaction.rs  session_model_snapshot.rs  status_runtime_snapshot.rs
crates/codegen/xai-grok-shell/src/test_support/: lsp_runtime.rs
crates/codegen/xai-grok-shell/tests/: dttn_runtime_defaults.rs  model_catalog_contract.rs  model_catalog_doctor_refresh.rs  session_model_snapshot_contract.rs  status_runtime_snapshot_contract.rs
crates/codegen/xai-grok-update/src/: auto_update.rs  minimum_version.rs  version.rs
crates/codegen/xai-grok-version/: Cargo.toml  build.rs
crates/codegen/xai-grok-version/src/: lib.rs
docs/: windows.md
docs/architecture/: dttn-core-migration.md  model-catalog-and-statusline.md  session-frozen-model-metadata.md
docs/examples/: dttn-config.toml
scripts/: apply-release-hardening.py  apply_dttn_model_doctor_entrypoint.py  apply_dttn_phase2.py  apply_dttn_phase3.py  apply_dttn_phase3_clean.py  apply_dttn_phase3_complete.py  apply_dttn_phase3_contract.py  apply_dttn_phase3_final.py  apply_dttn_phase3_fixed.py  apply_dttn_phase3_shell.py  apply_dttn_phase3_verified.py  check_dttn_phase1.py  check_dttn_phase2.py  install-windows.ps1
(+36 files in other folders)
