[package]
license = "Apache-2.0"
name = "xai-grok-config"
version = "0.1.0"
edition.workspace = true
description = "Shared config loading for Grok — grok_home, effective config (requirements > user > managed), TOML merge"

[dependencies]
base64 = { workspace = true }
blake3 = { workspace = true }
dunce = { workspace = true }
gethostname = { workspace = true }
# Shared signed deployment-config envelope contract with the cli-chat-proxy signer.
prod-mc-cli-chat-proxy-types = { path = "../../../prod/mc/cli-chat-proxy-types" }
reqwest = { workspace = true }
ring = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shellexpand = "3.1"
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true }
urlencoding = { workspace = true }
uuid = { workspace = true }
which = { workspace = true }
xai-tty-utils = { workspace = true }
xai-grok-version = { workspace = true }

# core-foundation: read macOS MDM managed preferences (`ai.x.grok`) for the
# admin-deployed requirements layer.
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]

[lints]
workspace = true